--- a/activityservice/src/main/resources/application.properties
+++ b/activityservice/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=activityservice
+
+spring.data.mongodb.uri=mongodb://localhost:27017/
+spring.data.mongodb.database=fitnessactivity
+
+
+
+
+server.port= 8082
