--- a/activityservice/pom.xml
+++ b/activityservice/pom.xml
@@ -63,6 +63,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -106,5 +110,4 @@
         </plugins>
     </build>
 
-	
 </project>
