--- a/aiservice/src/main/resources/application.yml
+++ b/aiservice/src/main/resources/application.yml
@@ -2,6 +2,12 @@ spring:
   application:
     name: ai-service
 
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
   data:
     mongodb:
       uri: mongodb://localhost:27017/
@@ -14,3 +20,11 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
+rabbitmq:
+  exchange:
+    name: fitness.exchange
+  queue:
+    name: fitness.queue
+  routing:
+    key: fitness.tracking
