Add environment variables for Gemini API in Aiservice launch configuration

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,7 +35,11 @@
       "mainClass": "com.fitness.aiservice.AiserviceApplication",
       "projectName": "aiservice",
       "args": "",
-      "envFile": "${workspaceFolder}/.env"
+      "envFile": "${workspaceFolder}/.env",
+      "env": {
+        "Gemini_API_KEY": "AIzaSyAIH8FD62ZGUOkbN2hPhdj_H5CF6vJ9kY8",
+        "Gemini_API_URL": "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key="
+      }
     }
   ]
 }
