added config client dependency and removed the contents of applicatio.yml files in all the three microservices so that they can get the info of the yml files from the config server

--- a/activityservice/src/main/resources/application.yml
+++ b/activityservice/src/main/resources/application.yml
@@ -1,30 +1,5 @@
 spring:
   application:
     name: activity-service
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/
-      database: fitnessactivity
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-
-server:
-  port: 8082
-
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-
-rabbitmq:
-  exchange:
-    name: fitness.exchange
-  queue:
-    name: fitness.queue
-  routing:
-    key: activity.tracking
+  config:
+    import: optional:configserver:http://localhost:8888
