--- a/aiservice/src/main/resources/application.yml
+++ b/aiservice/src/main/resources/application.yml
@@ -1,35 +1,5 @@
 spring:
   application:
     name: ai-service
-
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/
-      database: fitnessrecommendation
-
-server:
-  port: 8083
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-
-rabbitmq:
-  exchange:
-    name: fitness.exchange
-  queue:
-    name: fitness.queue
-  routing:
-    key: fitness.tracking
-
-gemini:
-  api:
-    url: "${GEMINI_API_URL}"
-    key: "${GEMINI_API_KEY}"
+  config:
+    import: optional:configserver:http://localhost:8888
