--- a/configserver/src/main/resources/config/activity-service.yml
+++ b/configserver/src/main/resources/config/activity-service.yml
@@ -15,6 +15,7 @@ server:
 eureka:
   instance:
     prefer-ip-address: true
+    hostname: localhost
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
