--- a/configserver/src/main/resources/config/ai-service.yml
+++ b/configserver/src/main/resources/config/ai-service.yml
@@ -17,6 +17,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: true
+    hostname: localhost
 
 rabbitmq:
   exchange:
