--- a/fitness-frontend/package.json
+++ b/fitness-frontend/package.json
@@ -4,26 +4,28 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5173",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.3.1",
-    "@reduxjs/toolkit": "^2.8.2",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-oauth2-code-pkce": "^1.23.1",
-    "react-redux": "^9.2.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
+    "@mui/icons-material": "^5.15.10",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-oauth2-code-pkce": "^1.22.0",
+    "react-redux": "^9.0.4",
     "react-router": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
